tests/baselines/reference/parserClassDeclaration4.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration4.ts (4 errors) ====
    class C extends A implements B extends C {
                                   ~~~~~~~
!!! error TS1005: '{' expected.
                                             ~
!!! error TS1005: ';' expected.
                    ~
!!! error TS2304: Cannot find name 'A'.
                                 ~
!!! error TS2304: Cannot find name 'B'.
    }